<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin">


        <!-- TODO: Update blank fragment layout -->

        <Toolbar
            android:id="@+id/registroToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:title="@string/app_name"
            android:titleTextColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/registroToolbar"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLoginEmail"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/loginEmail" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLoginPassword"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/loginPassword"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginBtLogin"
                android:textColor="@color/colorWhite"
                android:textSize="18dp"
                android:background="@drawable/login_bt_login"
                android:layout_marginTop="50dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp">

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="2dp"
                    android:background="@color/colorLoginOr"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginOr"
                    android:textSize="18dp"
                    android:textColor="@color/colorLoginOr"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorLoginOr"
                    android:gravity="center"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginBtRegister"
                android:textColor="@color/colorWhite"
                android:textSize="18dp"
                android:background="@drawable/login_bt_registrar"
                android:layout_marginTop="120dp"/>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>