<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgRestauranteImagem"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:src="@drawable/image1"/>

        <TextView
            android:id="@+id/txtRestauranteNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeRestauranteGenericoNome"
            android:textColor="@color/colorBlack"
            android:textSize="30dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/txtRestauranteEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeRestauranteGenericoEndereco"
            android:textColor="@color/colorBtResitrar"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/txtRestauranteHorario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeRestauranteGenericoHorario"
            android:textColor="@color/colorBtResitrar"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>